--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "moment": "^2.30.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "quill": "^2.0.3",
+    "quill-image-resize-module": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
