--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.2",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
+    "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
