--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.23.6",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "quill-image-resize-module": "^3.0.0",
