--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.23.6",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "jszip": "^3.10.1",
     "moment": "^2.30.1",
+    "pdfmake": "^0.2.20",
     "quill": "^2.0.3",
     "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
