--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.6",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
