--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@google/generative-ai": "^0.24.1",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
@@ -26,7 +27,9 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
+    "langchain": "^0.3.30",
     "moment": "^2.30.1",
+    "openai": "^5.10.2",
     "pdfmake": "^0.2.20",
     "quill": "^2.0.3",
     "quill-image-resize-module": "^3.0.0",
