--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-       "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0"
+    "preview": "vite preview",
+    "start": "vite preview --host 0.0.0.0",
+    "deploy": "npm install --production=false && npm run build"
   },
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
